# fitr

./: .gitignore  README.md  pyproject.toml
fitr/: __init__.py  cli.py  compare.py  fit.py  fold.py  io.py  report.py  vetting.py
fitr/models/: __init__.py  _util.py  base.py  blend.py  eb.py  planet.py  starspot.py
scripts/: generate_assets.py
tests/: conftest.py  test_cli.py  test_compare.py  test_cwd_independence.py  test_fit.py  test_fold.py  test_io.py  test_models.py  test_report.py  test_util.py  test_vetting.py
tests/data/: sample_planet_synthetic.npz
